# for-fun

./: CMakeLists.txt  README.md  any.cpp  functional.cpp  percolation.py  percolation.sample0.html  percolation.sample1.html  percolation.sample2.html  pretty_print.cpp  quickSort.hs  sort_benchmark.cpp
k-way-merge/: generator.cpp  log.generator  log.merger  merger.cpp  message.cpp  message.h  out.generator  out.merger
